Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>GitHub Theme</h1>
-          <h2>GitHub syntax theme for Atom</h2>
+          <h2></h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -31,12 +31,10 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="github-theme" class="anchor" href="#github-theme"><span class="octicon octicon-link"></span></a>GitHub Theme</h1>
+          <h2>
+<a name="github-syntax-theme-for-atom" class="anchor" href="#github-syntax-theme-for-atom"><span class="octicon octicon-link"></span></a>GitHub syntax theme for Atom</h2>
 
-<blockquote>
-<p>GitHub syntax theme for Atom.</p>
-</blockquote>
+<p><img src="http://miwurster.github.io/github-theme/screenshot.png" alt="GitHub Theme" title="GitHub Theme"></p>
         </section>
 
         <footer>
