Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/miwurster/github-theme/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/miwurster/github-theme/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/miwurster/github-theme" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/miwurster/atom-github-theme/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/miwurster/atom-github-theme/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/miwurster/atom-github-theme" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
           <h2>
-<a name="github-syntax-theme-for-atom" class="anchor" href="#github-syntax-theme-for-atom"><span class="octicon octicon-link"></span></a>GitHub syntax theme for Atom</h2>
+<a name="github-flavored-syntax-theme-for-atom" class="anchor" href="#github-flavored-syntax-theme-for-atom"><span class="octicon octicon-link"></span></a>GitHub flavored syntax theme for Atom.</h2>
 
 <p><img src="http://miwurster.github.io/github-theme/screenshot.png" alt="GitHub Theme" title="GitHub Theme"></p>
         </section>
