Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>GitHub Theme by miwurster</title>
+    <title>atom-github-theme by miwurster</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,15 +31,16 @@
 
       <section>
         <div id="title">
-          <h1>GitHub Theme</h1>
-          <p></p>
+          <h1>atom-github-theme</h1>
+          <p>GitHub Theme</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/miwurster">miwurster</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h2>
-<a id="github-flavored-syntax-theme-for-atom" class="anchor" href="#github-flavored-syntax-theme-for-atom" aria-hidden="true"><span class="octicon octicon-link"></span></a>GitHub flavored syntax theme for Atom.</h2>
+        <blockquote>
+<p>GitHub flavored syntax theme for Atom</p>
+</blockquote>
 
 <p><img src="http://miwurster.github.io/atom-github-theme/screenshot.png" alt="GitHub Theme" title="GitHub Theme"></p>
       </section>
